<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="binded" type="id" />

    <string name="app_name">CoseNonJaviste</string>
    <string name="loading_">Caricamento in corso…</string>
    <string name="download_error">Errore download</string>
    <string name="post">Post</string>
    <string name="share">Share</string>
    <string name="share_post">Share post</string>
    <string name="retry">Riprova</string>
    <string name="categories">Categorie</string>
    <string name="authors">Autori</string>
    <string name="twitter">Twitter</string>
    <string name="contacts">Contatti</string>
    <string name="post_count">%1s post</string>

    <string-array name="menu_items">
        <item>@string/post</item>
        <item>@string/categories</item>
        <item>@string/authors</item>
        <item>@string/twitter</item>
        <item>@string/contacts</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="mandatory_field">Campo obbligatorio</string>
    <string name="invalid_email">Email non valida</string>
    <string name="send">Send</string>
    <string name="message_sent">Messaggio inviato, grazie per il tuo contributo!</string>
    <string name="error_sending_message">Errore invio messaggio</string>

</resources>