<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="it.cosenonjaviste.core.list.GenericRxListViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:visibility="gone"
            tools:visibility="visible"/>

        <ProgressBar
            android:id="@+id/more_progress"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"
            app:visibleOrGone="@{viewModel.loadingNextPage}"/>

        <LinearLayout
            android:id="@+id/progress_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:gravity="center"
            android:orientation="vertical"
            app:visibleOrGone="@{viewModel.loading}">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/progress_in"/>

                <ProgressBar
                    android:id="@+id/progress"
                    style="@android:style/Widget.ProgressBar.Inverse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:indeterminate="false"
                    android:indeterminateDrawable="@drawable/progress_bar"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/progress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/loading_"
                android:textColor="#666"
                android:textSize="18sp"/>
        </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/more_progress"
            android:layout_below="@+id/toolbar"
            android:onRefreshListener="@{viewModel.loadDataPullToRefresh}"
            app:refreshing="@{viewModel.loadingPullToRefresh}"
            app:visibleOrGone="@{!viewModel.error &amp;&amp; !viewModel.loading}">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>

        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/error_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:visibleOrGone="@{viewModel.error &amp;&amp; !viewModel.loading}">

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_launcher"
                android:text="@string/download_error"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/error_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/retry"
                app:onClick="@{viewModel.reloadData}"/>
        </LinearLayout>

    </RelativeLayout>
</layout>